--- a/index2.html
+++ b/index2.html
@@ -7,7 +7,7 @@
 		<link rel="shortcut icon" type="image/x-icon" href="assets/favicon.png?">
 		<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
 		<link href='https://fonts.googleapis.com/css?family=Average|Bree+Serif' rel='stylesheet' type='text/css'>
-		<link href="tf-styles.css" rel="stylesheet" type="text/css" />
+		<link href="tf-styles2.css" rel="stylesheet" type="text/css" />
 	</head>
 	<body>
 		<div class="background">
