--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 
 					</section>
 					<section class="col-2"><p>
-						<a href="http://twitter.com/moojz">MOOJ ZADIE</a> is the founder and executive director of Tape Festival. Our assistant director is <a href="http://twitter.com/sylviedouglis">SYLVIE DOUGLIS</a>. Our technical director is <a href="http://twitter.com/FMcapper">MICKEY CAPPER</a>. Thanks for visiting.</p>
+						<a href="http://twitter.com/moojz">MOOJ ZADIE</a> is the founder and executive director of Tape Festival. </p> <p>Our assistant director is <a href="http://twitter.com/sylviedouglis">SYLVIE DOUGLIS</a>.</p> <p>Our technical director is <a href="http://twitter.com/FMcapper">MICKEY CAPPER</a>. </p><p>Thanks for visiting.</p>
 
 
 					</section>
